# vatis

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  airports.json  package-lock.json  vATIS.sln  vATIS.sln.DotSettings  vATIS.slnLaunch
.github/: CODEOWNERS
.github/workflows/: build.yml  ci.yml  codeql.yml  linux.yml  macos.yml  release.yml  windows.yml
.run/: DevServer.run.xml  Local Dev.run.xml  vATIS.Desktop.run.xml
DevServer/: DevServer.csproj  Program.cs  appsettings.json
DevServer/Controllers/: MetarController.cs
DevServer/Hub/: CacheService.cs  ClientHub.cs  ExpiringCacheSet.cs  ICacheService.cs  IClientHub.cs
DevServer/Properties/: launchSettings.json
DevServer/Services/: IMetarRepository.cs  MetarRepository.cs
DevServer/wwwroot/: index.html  style.css
NativeAudio/: CMakeLists.txt
NativeAudio/include/: audio_context.h  miniaudio.h  native_audio.h  sound_type.h  wav_data.h
NativeAudio/src/: audio_context.cpp  miniaudio.c  miniaudio.h  native_audio.cpp  wav_data.cpp
Scripts/: build-linux.sh  build-macos.sh  build-win.ps1  dmg-background.tiff
Vatsim.Network/: ClientAuth.cs  ClientProperties.cs  DataReceivedEventArgs.cs  Enums.cs  FSDSession.cs  IClientAuth.cs  NetworkErrorEventArgs.cs  NetworkEventArgs.cs  RawDataEventArgs.cs  Vatsim.Network.csproj
Vatsim.Network/PDU/: PDUATCMessage.cs  PDUATCPosition.cs  PDUAddATC.cs  PDUAddPilot.cs  PDUAuthChallenge.cs  PDUAuthResponse.cs  PDUBase.cs  PDUBroadcastMessage.cs  PDUChangeServer.cs  PDUClientIdentification.cs  PDUClientQuery.cs  PDUClientQueryResponse.cs  PDUCloudData.cs  PDUDeleteATC.cs  PDUDeletePilot.cs  PDUFastPilotPosition.cs  PDUFlightPlan.cs  PDUFlightPlanAmendment.cs  PDUFlightStrip.cs  PDUFormatException.cs  PDUHandoff.cs  PDUHandoffAccept.cs  PDUHandoffCancelled.cs  PDUIHaveTarget.cs  PDUKillRequest.cs  PDULandLineCommand.cs  PDULegacyPlaneInfoResponse.cs  PDUMetarRequest.cs  PDUMetarResponse.cs  PDUModernClientCheck.cs  PDUMute.cs  PDUPilotPosition.cs  PDUPing.cs  PDUPlaneInfoRequest.cs  PDUPlaneInfoResponse.cs  PDUPointout.cs  PDUPong.cs  PDUProtocolError.cs  PDUPushToDepartureList.cs  PDURadioMessage.cs  (+10 more)
Vatsim.Vatis/Atis/: AtisBuilder.cs  SurfaceWindNode.cs
licenses/: MiniAudio-License.txt  WatsonWebsocket-License.txt
vATIS.App/: App.axaml  ServiceProvider.cs  vATIS.App.csproj
vATIS.App/Atis/: AtisBuilder.cs  AtisVariable.cs  IAtisBuilder.cs  IdsUpdateRequest.cs
vATIS.App/Config/: AppConfiguration.cs  IAppConfig.cs  IAppConfigurationProvider.cs
vATIS.App/Events/: AtisHubExpiredAtisReceived.cs  AtisStationAdded.cs  AtisTemplateChanged.cs  AtisVoiceTypeChanged.cs  ClientEventArgs.cs  ExternalAtisConfigChanged.cs  HubConnected.cs  KillRequestReceived.cs  MetarResponseReceived.cs  SessionEnded.cs  StartupStatusChanged.cs
vATIS.App/Io/: Downloader.cs
vATIS.App/NavData/: Airport.cs  Navaid.cs
vATIS.App/Networking/: AuthTokenException.cs  NetworkConnection.cs  NetworkConnectionStatus.cs
vATIS.App/Profiles/: IProfileRepository.cs
vATIS.App/Sessions/: ISessionManager.cs
vATIS.App/TextToSpeech/: TextToSpeechRequestDto.cs  TextToSpeechService.cs  VoiceMetaData.cs
vATIS.App/Ui/: ICloseable.cs  IWindowFactory.cs
vATIS.App/Updates/: ClientUpdater.cs  ClientVersionInfo.cs  IClientUpdater.cs
vATIS.Desktop/: App.axaml  App.axaml.cs  Program.cs  ServiceProvider.cs  SourceGenerationContext.cs  app.manifest  stylecop.json  vATIS.Desktop.csproj
vATIS.Desktop/Assets/: MainIcon.icns
vATIS.Desktop/Atis/: AtisBuilder.cs  AtisBuilderException.cs  AtisBuilderResponse.cs  AtisVariable.cs  (+6 more)
(+520 files in other folders)
